# api/openapi.yaml
@@ -731,43 +731,6 @@ paths:
           $ref: '#/components/responses/UnknownError'
       x-codegen-request-body-name: body
 
-  /discovery/scopes:
-    get:
-      summary: Get all available scopes
-      operationId: GetDiscoveryScopes
-      parameters:
-        - $ref: '#/components/parameters/odataFilter'
-        - $ref: '#/components/parameters/odataSelect'
-        - $ref: '#/components/parameters/odataOrderBy'
-      responses:
-        200:
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Scopes'
-        default:
-          $ref: '#/components/responses/UnknownError'
-    put:
-      summary: Set all available scopes
-      operationId: PutDiscoveryScopes
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Scopes'
-        required: true
-      responses:
-        200:
-          description: All scopes were set successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Scopes'
-        default:
-          $ref: '#/components/responses/UnknownError'
-      x-codegen-request-body-name: body
-
   /findings/{findingID}:
     get:
       summary: Get the details for a finding.
@@ -1175,7 +1138,7 @@ components:
         scanFamiliesConfig:
           $ref: '#/components/schemas/ScanFamiliesConfig'
         scope:
-          $ref: '#/components/schemas/ScanScopeType'
+          type: string
         scheduled:
           $ref: '#/components/schemas/RuntimeScheduleScanConfig'
         maxParallelScanners:
@@ -1215,7 +1178,7 @@ components:
           $ref: '#/components/schemas/ScanFamiliesConfig'
           readOnly: true
         scope:
-          $ref: '#/components/schemas/ScanScopeType'
+          type: string
           readOnly: true
         scheduled:
           $ref: '#/components/schemas/RuntimeScheduleScanConfig'
@@ -1248,7 +1211,7 @@ components:
         scanFamiliesConfig:
           $ref: '#/components/schemas/ScanFamiliesConfig'
         scope:
-          $ref: '#/components/schemas/ScanScopeType'
+          type: string
         scheduled:
           $ref: '#/components/schemas/RuntimeScheduleScanConfig'
         maxParallelScanners:
@@ -1272,145 +1235,6 @@ components:
           readOnly: true
         scanConfig:
           $ref: '#/components/schemas/ScanConfig'
-
-    Scopes:
-      type: object
-      description: Scopes discovery
-      properties:
-        scopeInfo:
-          $ref: '#/components/schemas/ScopeType'
-
-    ScanScopeType:
-      type: object
-      anyOf:
-        - $ref: '#/components/schemas/AwsScanScope'
-      discriminator:
-        propertyName: objectType
-        mapping:
-          AwsScanScope: '#/components/schemas/AwsScanScope'
-
-    AwsScanScope:
-      type: object
-      description: The scope of a configured scan.
-      properties:
-        objectType:
-          type: string
-        allRegions:
-          description: Scan all regions, if set will override anything set in regions.
-          type: boolean
-        regions:
-          type: array
-          items:
-            $ref: '#/components/schemas/AwsRegion'
-          nullable: true
-        shouldScanStoppedInstances:
-          type: boolean
-        instanceTagSelector:
-          type: array
-          description: VM instances will be scanned if they contain all of these tags. If empty, not taken into account.
-          items:
-            $ref: '#/components/schemas/Tag'
-          nullable: true
-        instanceTagExclusion:
-          type: array
-          description: VM instances will not be scanned if they contain all of these tags (even if they match instanceTagSelector). If empty, not taken into account.
-          items:
-            $ref: '#/components/schemas/Tag'
-          nullable: true
-      required:
-        - objectType
-      additionalProperties: false
-
-    ScopeType:
-      type: object
-      anyOf:
-        - $ref: '#/components/schemas/AwsAccountScope'
-      discriminator:
-        propertyName: objectType
-        mapping:
-          AwsAccountScope: '#/components/schemas/AwsAccountScope'
-
-    AwsAccountScope:
-      type: object
-      description: AWS cloud account scope
-      properties:
-        objectType:
-          type: string
-        regions:
-          type: array
-          items:
-            $ref: '#/components/schemas/AwsRegion'
-          nullable: true
-      required:
-        - objectType
-
-    AwsRegion:
-      type: object
-      description: AWS region
-      properties:
-        name:
-          type: string
-          minLength: 1
-        vpcs:
-          type: array
-          items:
-            $ref: '#/components/schemas/AwsVPC'
-          nullable: true
-      required:
-        - name
-      additionalProperties: false
-
-    AwsVPC:
-      type: object
-      description: AWS VPC
-      properties:
-        id:
-          type: string
-          minLength: 1
-        securityGroups:
-          type: array
-          items:
-            $ref: '#/components/schemas/AwsSecurityGroup'
-          nullable: true
-      required:
-        - id
-      additionalProperties: false
-
-
-    SecurityGroup:
-      type: object
-      description: general cloud security group
-      properties:
-        id:
-          type: string
-          minLength: 1
-      required:
-        - id
-      additionalProperties: false
-
-    AwsSecurityGroup:
-      type: object
-      description: AWS security group
-      properties:
-        id:
-          type: string
-          minLength: 1
-      required:
-        - id
-      additionalProperties: false
-
-    Tag:
-      type: object
-      description: AWS tag
-      properties:
-        key:
-          type: string
-        value:
-          type: string
-      required:
-        - key
-        - value
-      additionalProperties: false
 
     RuntimeScheduleScanConfig:
       type: object
@@ -1553,6 +1377,30 @@ components:
         - image
         - platform
         - launchTime
+
+    SecurityGroup:
+      type: object
+      description: general cloud security group
+      properties:
+        id:
+          type: string
+          minLength: 1
+      required:
+        - id
+      additionalProperties: false
+
+    Tag:
+      type: object
+      description: AWS tag
+      properties:
+        key:
+          type: string
+        value:
+          type: string
+      required:
+        - key
+        - value
+      additionalProperties: false
 
     PodInfo:
       type: object
